# ising

./: .gitignore  .gitmodules  Makefile.am  README  configure.ac  writeup.tex
Optimized/tests/: gridsize2  gs.gp
src/: Makefile.am  ising.cc  lattice.cc  lattice.h  main.cc  runs.cc
tests/: Makefile.am  tasks
