dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(ising, 0.1)

AC_DEFINE(DEFAULT_SIZE,100,Default lattice size)
AC_DEFINE(DEFAULT_kT,1,Default temperature)
AC_DEFINE(DEFAULT_J,1,Default interaction parameter)
AC_DEFINE(DEFAULT_muH,0,Default external field)

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AC_CONFIG_HEADERS([config.h])
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CXX
AM_PROG_CC_STDC
AC_HEADER_STDC











AC_OUTPUT([
Makefile
src/Makefile

])
